[package]
name = "nexus-cog-causal"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Causal reasoning: forward, backward, counterfactual, pre-mortem analysis"
license = "Apache-2.0"
repository = "https://github.com/nexus-cognitive-tech/nexus-cog-causal"
homepage = "https://github.com/nexus-cognitive-tech"
authors = ["Nexus Cognitive Technologies"]
keywords = ["cognition", "agent"]
categories = ["data-structures", "development-tools"]
readme = "README.md"

[dependencies]
nexus-cog-core = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-core", tag = "v0.1.3" }
nexus-cog-storage = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-storage", tag = "v0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
